[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/RockSlimev2-2.png.png" type="Texture" id=1]
[ext_resource path="res://Assets/RockSlimev2-1.png.png" type="Texture" id=2]
[ext_resource path="res://Scripts/RockSlime.gd" type="Script" id=3]
[ext_resource path="res://Assets/ExclamationMarkPixel.png" type="Texture" id=4]
[ext_resource path="res://Assets/UnderHealthBar.png" type="Texture" id=5]
[ext_resource path="res://Assets/ProgressHealthBar.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5, 5 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "Air",
"speed": 1.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Charge",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 2.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 6, 6 )

[sub_resource type="Animation" id=4]
resource_name = "Charge"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 0 ), Vector2( -2, 0 ), Vector2( 2, 0 ), Vector2( -2, 0 ), Vector2( 2, 0 ), Vector2( -2, 0 ), Vector2( 2, 0 ), Vector2( -2, 0 ), Vector2( 2, 0 ), Vector2( -2, 0 ), Vector2( 2, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ExclamationMarkPixel:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 0 ), Vector2( -2, 0 ), Vector2( 2, 0 ), Vector2( -2, 0 ), Vector2( 2, 0 ), Vector2( -2, 0 ), Vector2( 2, 0 ), Vector2( -2, 0 ), Vector2( 2, 0 ), Vector2( -2, 0 ), Vector2( 2, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "Detect"
tracks/0/type = "value"
tracks/0/path = NodePath("ExclamationMarkPixel:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=8]
resource_name = "Hurt"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ExclamationMarkPixel:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ExclamationMarkPixel:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="RockSlime" type="KinematicBody2D" groups=["rock"]]
position = Vector2( 1246, 1656 )
collision_layer = 4
collision_mask = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -6 )
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -2, -8 )
frames = SubResource( 3 )
animation = "Charge"
playing = true
offset = Vector2( 2, 0 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -6 )
shape = SubResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Charge = SubResource( 4 )
anims/Detect = SubResource( 7 )
anims/Hurt = SubResource( 8 )
anims/RESET = SubResource( 5 )

[node name="ChargeTimer" type="Timer" parent="."]
wait_time = 1.3
autostart = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="ExclamationMarkPixel" type="Sprite" parent="."]
visible = false
position = Vector2( 1, -18 )
texture = ExtResource( 4 )

[node name="StunTimer" type="Timer" parent="."]
one_shot = true

[node name="Health" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="TextureProgress" type="TextureProgress" parent="Health"]
margin_left = -10.0
margin_top = -17.0
margin_right = 70.0
margin_bottom = -1.0
rect_scale = Vector2( 0.25, 0.25 )
value = 100.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 6 )
tint_progress = Color( 0.309804, 0.847059, 0.137255, 1 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="StunTimer" to="." method="_on_StunTimer_timeout"]
